Release 1.0.0: Initial release of NIT Validation Library